<resources>
    <string name="app_name">youthapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="id">아이디*</string>
    <string name="pwd">비밀번호*</string>
    <string name="pwd_ok">비밀번호 확인*</string>
    <string name="name">이름*</string>
    <string name="email">이메일</string>
    <string name="address">주소*</string>
    <string name="birth">생년월일*</string>
    <string name="gender">성별</string>
    <string name="pwd_hint">비밀번호를 입력해주세요</string>
    <string name="pwd_ok_hint">비밀번호를 한번 더 입력해주세요</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>